# CAOS_MINEHAUL

./: .gitignore  CHANGELOG.md  README.md  VERSION  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
docs/: README.md  what-it-is-and-isnt.md
docs/adr/: ADR-0001-event-scheduling-engine-no-simpy.md  ADR-0002-numpy-only-core.md  ADR-0003-cyclelog-event-anchoring.md  ADR-0004-package-name-minehaulsim.md  ADR-0005-single-lane-op-segments.md  ADR-0006-inventory-coupled-fleets.md
docs/architecture/: 01_layers.md  02_engine-and-determinism.md  03_network-geometry-planning.md  architecture.md
docs/data-contract/: 01_cyclelog-v1.md  02_spec-provenance-topo.md  data-contract.md
docs/guides/: 01_quickstart.md  02_custom-policy.md  03_custom-equipment-network.md  04_dispatchlab-integration.md  guides.md
docs/scenarios/: 01_openpit-axes.md  02_underground-axes.md  03_validity-gates.md  scenarios.md
docs/theory/: 01_rimpull-speed.md  02_match-factor.md  03_bunching-zones.md  theory.md
gallery/: README.md
scripts/: bench_engine.py  demo_offline.py  gen_gallery.py
src/minehaulsim/: __init__.py  rng.py  types.py
src/minehaulsim_cli/: __main__.py
tests/: __init__.py  test_cli.py  test_des.py  test_failures.py  test_geology.py  test_geometry.py  test_io.py  test_kinematics.py  test_network.py  test_perf.py  test_planning_damage_zones.py  test_planning_deplete.py  test_planning_evaluate.py  test_planning_model.py  test_planning_overlay.py  test_rng.py  test_routing.py  test_scenarios.py  test_sim.py  test_underground.py  test_viz.py
(+46 files in other folders)
